--- a/frontend/src/layouts/full/sidebar/Sidebar.css
+++ b/frontend/src/layouts/full/sidebar/Sidebar.css
@@ -89,8 +89,9 @@
   }
 
   .text-title {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     font-weight: bold;
+    color: #4065B6;
   }
 
   @media (min-width: 768px) {
@@ -114,6 +115,7 @@
     .sidebar-toggle-btn {
       display: block;
     }
+
     
   }
 
@@ -133,7 +135,7 @@
     }
 
     .text-title {
-      font-size: 15px;
+      font-size: 13px;
       margin: 0rem 1rem 0.5rem;
     }
 
