--- a/frontend/src/views/landingPage/home/Home.css
+++ b/frontend/src/views/landingPage/home/Home.css
@@ -1,21 +1,11 @@
-    @font-face {
-        font-family: 'Poppins';
-        src: url('../../../components/Font/Poppins-Regular.ttf') format('truetype');
-        font-weight: normal;
-        font-style: normal;
-    }
-    
-    .style-font {
-        font-family: 'Poppins', sans-serif;
-    }
-
-    .font-title{
+    .font-judul{
         color: #4065B6;
+        font-size: 2rem
     }
 
     .font-title2{
         color: #4065B6;
-        font-size: 2.25rem
+        font-size: 2rem
     }
 
     .font-title3{
@@ -43,10 +33,18 @@
         .font-des {
             font-size: 0.8rem;
         }
-    
-        .font-title {
-            font-size: 1.5rem;
+        .font-judul {
+            font-size: 1.7rem;
         }
+
+        .font-title2{
+            font-size: 1.7rem
+        }
+
+        .font-title3{
+            font-size: 1.4rem
+        }
+    
         .img-hero {
             width: 17rem;
         }
@@ -60,9 +58,11 @@
         .font-des {
             font-size: 1.25rem;
         }
-    
-        .font-title {
-            font-size: 2.5rem;
+        .font-judul {
+            font-size: 2.4rem;
+        }
+        .font-title2{
+            font-size: 2.2rem
         }
         .img-hero {
             width: 23rem;
@@ -76,8 +76,8 @@
             font-size: 1.25rem;
         }
     
-        .font-title {
-            font-size: 3rem;
+        .font-judul {
+            font-size: 2.8rem;
         }
         .img-hero {
             width: 30rem;
